--- a/Source/Zybach.Web/src/app/shared/components/chemigation-permit-chemical-formulations-editor/chemigation-permit-chemical-formulations-editor.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/chemigation-permit-chemical-formulations-editor/chemigation-permit-chemical-formulations-editor.component.html
@@ -8,12 +8,16 @@
             <label class="required"><strong>Formulation: </strong></label>
         </div>
 
-        <div class="col-3 control-label text-left mb-2">
+        <div class="col-2 control-label text-right mb-2">
+            <label class="required"><strong>Total Applied: </strong></label>
+        </div>
+
+        <div class="col-2 control-label text-left mb-2">
             <label class="required"><strong>Unit: </strong></label>
         </div>
 
-        <div class="col-3 control-label text-right mb-2">
-            <label class="required"><strong>Total Applied: </strong></label>
+        <div class="col-2 control-label text-right mb-2">
+            <label class="required"><strong>Acres Treated: </strong></label>
         </div>
     </div>
     <div class="row col-10" *ngFor="let chemicalPermitAnnualRecordChemicalFormulation of model; let index = index">
@@ -27,7 +31,12 @@
             </select>
         </div>
 
-        <div class="col-3 text-left mb-2">
+        <div class="col-2 text-left mb-2">
+            <input type="number" step=".1" class="form-control" name="TotalApplied-{{index}}" required
+                [(ngModel)]="chemicalPermitAnnualRecordChemicalFormulation.TotalApplied" />
+        </div>
+
+        <div class="col-2 text-left mb-2">
             <select class="form-control" name="ChemicalUnitID-{{index}}"
                 [(ngModel)]="chemicalPermitAnnualRecordChemicalFormulation.ChemicalUnitID" required>
                 <option selected disabled [value]="">Choose One</option>
@@ -38,9 +47,9 @@
             </select>
         </div>
 
-        <div class="col-3 text-left mb-2">
-            <input type="number" class="form-control" name="TotalApplied-{{index}}" required
-                [(ngModel)]="chemicalPermitAnnualRecordChemicalFormulation.TotalApplied" />
+        <div class="col-2 text-left mb-2">
+            <input type="number" step=".1" class="form-control" name="AcresTreated-{{index}}" required 
+                [(ngModel)]="chemicalPermitAnnualRecordChemicalFormulation.AcresTreated" />
         </div>
 
         <div class="col-2 text-left mb-2">
