--- a/Source/Zybach.Web/src/app/pages/robust-review-scenario/robust-review-scenario.component.html
+++ b/Source/Zybach.Web/src/app/pages/robust-review-scenario/robust-review-scenario.component.html
@@ -7,6 +7,21 @@
     <app-alert-display></app-alert-display>
     <h2 class="d-inline-block">Robust Review Scenario</h2>
     <custom-rich-text [customRichTextTypeID]="richTextTypeID"></custom-rich-text>
-    <button class="btn btn-zybach" (click)="getRobustReviewScenarioJson()" [disabled]="fileDownloading">Download Robust Review Scenario .json <span *ngIf="fileDownloading" class="fas fa-spinner loading-spinner"></span> </button>
-    <button class="btn btn-zybach" (click)="new()" [disabled]="fileDownloading">New</button>
+    <button class="btn btn-zybach" (click)="getRobustReviewScenarioJson()" [disabled]="fileDownloading">Download Robust
+        Review Scenario .json <span *ngIf="fileDownloading" class="fas fa-spinner loading-spinner"></span> </button>
+    <div class="row">
+        <div class="col-12">
+            <fresca-clear-grid-filters-button class="mr-3" [grid]="robustReviewScenarioGETRunHistoryGrid">
+            </fresca-clear-grid-filters-button>
+            <button class="btn btn-zybach float-right" (click)="new()" [disabled]="fileDownloading">New Robust Review Scenario
+                Action</button>
+        </div>
+        <div class="col-12 table table-responsive">
+            <ag-grid-angular #robustReviewScenarioGETRunHistoryGrid style="width: 100%; height: 500px;"
+                class="ag-theme-balham" [rowData]="robustReviewScenarioGETRunHistories" [columnDefs]="columnDefs"
+                [pagination]="true" [suppressMenuHide]="true" [paginationPageSize]="100"
+                (firstDataRendered)="onFirstDataRendered($event)">
+            </ag-grid-angular>
+        </div>
+    </div>
 </div>
