--- a/Source/Zybach.Web/src/app/pages/robust-review-scenario/robust-review-scenario.component.html
+++ b/Source/Zybach.Web/src/app/pages/robust-review-scenario/robust-review-scenario.component.html
@@ -7,13 +7,16 @@
     <app-alert-display></app-alert-display>
     <h2 class="d-inline-block">Robust Review Scenario</h2>
     <custom-rich-text [customRichTextTypeID]="richTextTypeID"></custom-rich-text>
-    <button class="btn btn-zybach" (click)="getRobustReviewScenarioJson()" [disabled]="fileDownloading">Download Robust
-        Review Scenario .json <span *ngIf="fileDownloading" class="fas fa-spinner loading-spinner"></span> </button>
+    
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 mb-1">
+            <button class="btn btn-zybach float-right" (click)="getRobustReviewScenarioJson()" [disabled]="fileDownloading">Download Robust
+                Review Scenario .json <span *ngIf="fileDownloading" class="fas fa-spinner loading-spinner"></span> </button>
+        </div>
+        <div class="col-12 mb-1">
             <fresca-clear-grid-filters-button class="mr-3" [grid]="robustReviewScenarioGETRunHistoryGrid">
             </fresca-clear-grid-filters-button>
-            <button class="btn btn-zybach float-right" (click)="new()" [disabled]="!canCreateNewRun() || fileDownloading">New Robust Review Scenario
+            <button class="btn btn-zybach float-right" (click)="triggerNewRobustReviewScenarioRun()" [disabled]="!canCreateNewRun() || fileDownloading"> <span *ngIf="newRunTriggered" class="fas fa-spinner loading-spinner"></span>New Robust Review Scenario
                 Action</button>
         </div>
         <div class="col-12 table table-responsive">
