142 - created ChemigationPermitAnnualRecordApplicator table and crud components for it changed to use ChemigationPermitAnnualRecordChemicalFormulationUpsertDto instead of SimpleDto to facilitate data annotations validation still need to pretty up the validation messages since we might have to aggregate them and not spell them out by row

--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -201,7 +201,37 @@
 
                     <hr class="w-90" />
 
-                    <div class="row col-12 table-responsive">
+                    <div class="row col-12 table-responsive mb-4">
+                        <h5>Certified Chemigation Applicators</h5>
+                        <div *ngIf="currentYearAnnualRecord.Applicators.length > 0; then hasApplicators else noApplicators"></div>
+                        <ng-template #hasApplicators>
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Certification Number</th>
+                                        <th>Expiration</th>
+                                        <th>Home Phone</th>
+                                        <th>Mobile Phone</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let applicator of currentYearAnnualRecord.Applicators">
+                                        <td>{{applicator.ApplicatorName}}</td>
+                                        <td>{{applicator.CertificationNumber}}</td>
+                                        <td>{{applicator.ExpirationYear}}</td>
+                                        <td>{{applicator.HomePhone}}</td>
+                                        <td>{{applicator.MobilePhone}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </ng-template>
+                        <ng-template #noApplicators>No certified chemigation applicators on file.</ng-template>
+                    </div>
+
+                    <hr class="w-90" />
+
+                    <div class="row col-12 table-responsive mb-4">
                         <h5>Applied Chemicals</h5>
                         <div *ngIf="currentYearAnnualRecord.ChemicalFormulations.length > 0; then hasChemicalFormulations else noChemicalFormulations"></div>
                         <ng-template #hasChemicalFormulations>
