--- a/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
@@ -83,6 +83,12 @@
                             (isFormValid)="isAnnualRecordFormValid($event)" [(model)]="model.ChemigationPermitAnnualRecord">
                         </zybach-chemigation-permit-annual-record-upsert>
 
+                        <hr class="w-90" />
+
+                        <zybach-chemigation-permit-applicators-editor #applicatorsForm
+                            (isFormValid)="isApplicatorsFormValid($event)" [(model)]="model.ChemigationPermitAnnualRecord.Applicators">
+                        </zybach-chemigation-permit-applicators-editor>
+
                     </div>
                 </div>
 
