ZYB-72: now able to add wells to a CPAR entry; still need to show permits on the well detail page

--- a/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
@@ -89,6 +89,11 @@
                             (isFormValid)="isApplicatorsFormValid($event)" [(model)]="model.ChemigationPermitAnnualRecord.Applicators">
                         </zybach-chemigation-permit-applicators-editor>
 
+                        <hr class="w-90" />
+
+                        <zybach-chemigation-permit-wells-editor #wellsForm
+                            (isFormValid)="isWellsFormValid($event)" [(model)]="model.ChemigationPermitAnnualRecord.Wells">
+                        </zybach-chemigation-permit-wells-editor>
                     </div>
                 </div>
 
