--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-add-record/chemigation-permit-add-record.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-add-record/chemigation-permit-add-record.component.html
@@ -95,6 +95,11 @@
                             (isFormValid)="isChemicalFormulationsFormValid($event)" [(model)]="model.ChemicalFormulations">
                         </zybach-chemigation-permit-chemical-formulations-editor>
 
+                        <hr class="w-90" />
+
+                        <zybach-chemigation-permit-wells-editor #wellsForm
+                            (isFormValid)="isWellsFormValid($event)" [(model)]="model.Wells">
+                        </zybach-chemigation-permit-wells-editor>
                     </div>
                 </div>
 
