--- a/Source/Zybach.Web/src/app/shared/components/chemigation-permit-applicators-editor/chemigation-permit-applicators-editor.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/chemigation-permit-applicators-editor/chemigation-permit-applicators-editor.component.html
@@ -33,8 +33,14 @@
         </div>
 
         <div class="col-1 text-left mb-2">
-            <input type="number" step="1" class="form-control" name="ExpirationYear-{{index}}" required 
-                [(ngModel)]="chemicalPermitAnnualRecordApplicator.ExpirationYear" />
+            <select class="form-control" name="ExpirationYear-{{index}}"
+                [(ngModel)]="chemicalPermitAnnualRecordApplicator.ExpirationYear" required>
+                <option selected disabled [value]="">Choose One</option>
+                <option *ngFor="let year of expirationYears"
+                    [value]="year">
+                    {{year}}
+                </option>
+            </select>
         </div>
 
         <div class="col-2 text-left mb-2">
