now showing permits on well details page; now hyperlinking wells from permit detail page

--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -272,7 +272,7 @@
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let well of currentYearAnnualRecord.Wells">
-                                        <td>{{well.WellRegistrationID}}</td>
+                                        <td><a routerLink="/wells/{{well.WellRegistrationID}}">{{well.WellRegistrationID}}</a></td>
                                     </tr>
                                 </tbody>
                             </table>
