--- a/Source/Zybach.Web/src/app/shared/components/chemigation-permit-wells-editor/chemigation-permit-wells-editor.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/chemigation-permit-wells-editor/chemigation-permit-wells-editor.component.html
@@ -1,6 +1,6 @@
 <h4>Wells</h4>
 <form #wellsForm="ngForm">
-    <div class="row col-10">
+    <div class="row col-10" *ngIf="model.length > 0">
         <div class="col-4 control-label text-left mb-2">
             <label class="required"><strong>Registered Well ID: </strong></label>
         </div>
