--- a/Source/Zybach.Web/src/styles.scss
+++ b/Source/Zybach.Web/src/styles.scss
@@ -13,6 +13,7 @@
 @import "scss/_custom-bootstrap.scss";
 
 @import '~ngx-toastr/toastr';
+@import "~@ng-select/ng-select/themes/default.theme.css";
 
 //ckeditor css
 
