reshaped chemical-formulation-yearly-total dto

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -84,6 +84,11 @@
                         Report Center
                     </a>
                 </div>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a routerLink="/reports/ndee-report" class="dropdown-item">
+                        NDEE Chemicals Report
+                    </a>
+                </div>
             </li>
         </ul>
     </div>
