--- a/Source/Zybach.Web/src/app/pages/ndee-chemicals-report/ndee-chemicals-report.component.html
+++ b/Source/Zybach.Web/src/app/pages/ndee-chemicals-report/ndee-chemicals-report.component.html
@@ -10,10 +10,10 @@
         <div class="container col-12">
             <div class="row my-2">
                 <div class="col">
-                    <fresca-clear-grid-filters-button class="float-left mr-2" [grid]="chemicalReportGrid">
-                    </fresca-clear-grid-filters-button>
-                    <a class="btn btn-secondary btn-sm float-right mr-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
+                    <a class="btn btn-secondary btn-md float-right mr-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
                     ngbTooltip="Download Report as CSV"><i class="fas fa-download"></i></a>
+                    <fresca-clear-grid-filters-button class="float-right mr-2" [grid]="chemicalReportGrid">
+                    </fresca-clear-grid-filters-button>
                 </div>
             </div>
             <div class="table-responsive">
