--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -264,9 +264,12 @@
                         <ng-template #noChemicalFormulations>No chemicals were used in the chemigation system in the past year.</ng-template>
                     </div>
 
-                    <hr class="w-90" />
+                    <div class="col-12">
+                        <hr class="w-90" />
 
-                    <div class="row col-6 table-responsive mb-4">
+                    </div>
+
+                    <div class="col-6 table-responsive mb-4">
                         <h5>Wells</h5>
                         <div *ngIf="currentYearAnnualRecord.Wells.length > 0; then hasWells else noWells"></div>
                         <ng-template #hasWells>
