fix broken link

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -228,7 +228,7 @@
                             </thead>
                             <tbody>
                                 <tr *ngFor="let chemigationPermitAnnualRecord of chemigationPermitAnnualRecords">
-                                    <td><a routerLink="/chemigationPermits/{{chemigationPermitAnnualRecord.ChemigationPermit.ChemigationPermitNumber}}">{{chemigationPermitAnnualRecord.ChemigationPermit.ChemigationPermitNumber}}</a></td>
+                                    <td><a routerLink="/chemigation-permits/{{chemigationPermitAnnualRecord.ChemigationPermit.ChemigationPermitNumber}}">{{chemigationPermitAnnualRecord.ChemigationPermit.ChemigationPermitNumber}}</a></td>
                                     <td>{{chemigationPermitAnnualRecord.ChemigationPermitAnnualRecordStatusName}}</td>
                                     <td>{{chemigationPermitAnnualRecord.ChemigationPermit.TownshipRangeSection}}</td>
                                     <td>{{chemigationPermitAnnualRecord.RecordYear}}</td>
