made permit number be input type number

--- a/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
@@ -41,7 +41,7 @@
                                     <label class="required"><strong>Chemigation Permit Number: </strong></label>
                                 </div>
                                 <div class="col-6 text-left mb-2">
-                                    <input type="text" class="form-control" name="ChemigationPermitNumber"
+                                    <input type="number" class="form-control" name="ChemigationPermitNumber"
                                         placeholder="Permit Number" required [(ngModel)]="model.ChemigationPermitNumber" />
                                 </div>
 
