--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-list/chemigation-permit-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-list/chemigation-permit-list.component.html
@@ -10,6 +10,8 @@
         <div class="container col-12">
             <div class="row my-2">
                 <div class="col">
+                    <a class="btn btn-secondary btn-md float-right mr-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
+                    ngbTooltip="Download as CSV"><i class="fas fa-download"></i></a>
                     <fresca-clear-grid-filters-button class="mr-3" [grid]="permitGrid">
                     </fresca-clear-grid-filters-button>
                     <a class="btn btn-zybach btn-md mr-3 float-right" routerLink="/chemigation-permits/new"><span class="fas fa-plus"></span> New Chemigation Permit </a>
