working chemigation permit annual record grid for reports center, TODO: year selector

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -83,6 +83,9 @@
                     <a routerLink="/reports" class="dropdown-item">
                         Report Center
                     </a>
+                    <a routerLink="/reports/chemigation-permit-reports" class="dropdown-item">
+                        Chemigation Permit Reports
+                    </a>
                     <a routerLink="/reports/ndee-report" class="dropdown-item">
                         NDEE Chemicals Report
                     </a>
