--- a/Source/Zybach.Web/src/app/shared/components/ag-grid/custom-pinned-row-renderer/custom-pinned-row-renderer.component.scss
+++ b/Source/Zybach.Web/src/app/shared/components/ag-grid/custom-pinned-row-renderer/custom-pinned-row-renderer.component.scss
@@ -1,7 +1,7 @@
-$fresca-primary: #F0644B;
+$zybach-primary: #0076C0;
 
 div {
-    background-color: $fresca-primary;
+    background-color: $zybach-primary;
     color: #fff;
     padding-left: 10px;
 }
