--- a/Source/Zybach.Web/src/app/shared/components/chemigation-permit-wells-editor/chemigation-permit-wells-editor.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/chemigation-permit-wells-editor/chemigation-permit-wells-editor.component.html
@@ -20,7 +20,9 @@
         </div>
     </div>
 </form>
-<button type="button" class="btn btn-zybach" (click)="addRow()">
-    <span class="fa fa-plus"></span>
-    Add New Well
-</button>
+<div class="row ml-3 mt-2">
+    <button type="button" class="btn btn-zybach" (click)="addRow()">
+        <span class="fa fa-plus"></span>
+        Add New Well
+    </button>
+</div>
