--- a/Source/Zybach.Web/src/app/shared/components/chemigation-permit-chemical-formulations-editor/chemigation-permit-chemical-formulations-editor.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/chemigation-permit-chemical-formulations-editor/chemigation-permit-chemical-formulations-editor.component.html
@@ -8,7 +8,7 @@
             <label class="required"><strong>Formulation: </strong></label>
         </div>
 
-        <div class="col-2 control-label text-right mb-2">
+        <div class="col-2 control-label text-left mb-2">
             <label class="required"><strong>Total Applied: </strong></label>
         </div>
 
@@ -16,7 +16,7 @@
             <label class="required"><strong>Unit: </strong></label>
         </div>
 
-        <div class="col-2 control-label text-right mb-2">
+        <div class="col-2 control-label text-left mb-2">
             <label class="required"><strong>Acres Treated: </strong></label>
         </div>
     </div>
@@ -53,7 +53,9 @@
         </div>
     </div>
 </form>
-<button type="button" class="btn btn-zybach" (click)="addRow()">
-    <span class="fa fa-plus"></span>
-    Add New Chemical
-</button>
+<div class="row ml-3 mt-2">
+    <button type="button" class="btn btn-zybach" (click)="addRow()">
+        <span class="fa fa-plus"></span>
+        Add New Chemical
+    </button>
+</div>
