--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-reports/chemigation-permit-reports.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-reports/chemigation-permit-reports.component.html
@@ -2,7 +2,7 @@
     <app-alert-display></app-alert-display>
     <div class="row">
         <div class="col-12">
-            <h2 class="d-inline-block">Chemigation Permits Report Center</h2>
+            <h2 class="d-inline-block">Chemigation Permit Reports</h2>
             <custom-rich-text [customRichTextTypeID]="richTextTypeID"></custom-rich-text>
         </div>
     </div>
